name:          dumbus
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          dumbus
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
                  , NoImplicitPrelude
    build-depends:  base   >= 4                   && < 5
                  , interpolatedstring-perl6 >= 1 && < 2
                  , lens >= 4.5                   && < 5
                  , protolude >= 0.1.6            && < 1
                  , scotty >= 0.10.0              && < 0.11
                  , time   >= 1.5.0.0             && < 1.7
                  , xml-conduit >= 1.3.5          && < 2
                  , wreq >= 0.4.1.0               && < 0.5
