name:          dumbus
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          dumbus
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
                  , NoImplicitPrelude
                  , TupleSections
                  , QuasiQuotes
    build-depends:  base   >= 4                     && < 5
                  , cassava >= 0.4.5                && < 0.5
                  , here >= 1.2.7                   && < 2
                  , lens >= 4.5                     && < 5
                  , monad-parallel >= 0.7.2.0       && < 0.8
                  , protolude >= 0.1.6              && < 1
                  , scotty >= 0.10.0                && < 0.11
                  , unordered-containers >= 0.2.5.0 && < 0.3.0.0
                  , vector >= 0.11.0.0              && < 0.12
                  , xml-conduit >= 1.3.5            && < 2
                  , wreq >= 0.4.1.0                 && < 0.5
